# lead-generation

./: .gitattributes  .gitignore  PlanningLeadGenerator.spec  README.md  pyproject.toml
docs/superpowers/plans/: 2026-07-21-document-download-throughput.md
docs/superpowers/specs/: 2026-07-21-document-download-throughput-design.md
src/lead_generator/: __init__.py
src/lead_generator/planning/: __init__.py  cli.py  enrichment.py  gui.py  http.py  leads.py  models.py  parsing.py  portals.py  scheduler.py
src/lead_generator/planning/adapters/: __init__.py  achieveforms.py  agile.py  arcus.py  atrium.py  authority_specific.py  base.py  bespoke_portals.py  civica.py  generic.py  idox.py  legacy_forms.py  northgate.py  ocella.py  wiltshire.py
src/lead_generator/planning/data/: __init__.py  planning_authorities.geojson
tests/: test_arcus_scraper.py  test_authority_specific_adapters.py  test_bespoke_portals.py  test_enrichment.py  test_gui.py  test_http.py  test_idox_scraper.py  test_leads.py  test_non_idox_scrapers.py  test_ocella_scraper.py  test_portals.py  test_scheduler.py  test_wiltshire_scraper.py
tests/fixtures/: agile_detail.html  agile_listing.html  civica_detail.html  civica_listing.html  idox_documents.html  idox_listing.html  idox_summary.html  idox_weekly_detail.html  idox_weekly_form.html  northgate_detail.html  northgate_listing.html  ocella_detail.html  ocella_listing.html
tools/: build_authority_catalogue.py
tools/pyinstaller_hooks/: hook-_tkinter.py
tools/pyinstaller_hooks/pre_find_module_path/: hook-tkinter.py
